Closes #5 Table Name should be part of the URL
