# controllers/table.controller.js
@@ -1,0 +1,90 @@
+const DynamodbService = require('../services/dynamodb.service');
+
+TableController = {
+  getDocumentsFromTable: (req, res) => {
+    try {
+      DynamodbService.getDocumentsFromTable(req.params.tableName).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(404).send('Document not found');
+        }
+      );
+    } catch (error) {
+      res.status(500).send(error);
+    }
+  },
+
+  getDocumentFromTable: (req, res) => {
+    try {
+      DynamodbService.getDocumentFromTable(
+        req.params.tableName,
+        req.params.documentId
+      ).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(404).send('Document not found');
+        }
+      );
+    } catch (error) {
+      res.status(500).send(error);
+    }
+  },
+
+  addDocumentToTable: (req, res) => {
+    try {
+      DynamodbService.addDocumentToTable(req.params.tableName, req.body).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(405).send('Invalid input');
+        }
+      );
+    } catch (error) {
+      res.status(500).send(error);
+    }
+  },
+
+  deleteDocumentFromTable: (req, res) => {
+    try {
+      DynamodbService.deleteDocumentFromTable(
+        req.params.tableName,
+        req.params.documentId
+      ).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(405).send('Document not found');
+        }
+      );
+    } catch (error) {
+      res.status(500).send(error);
+    }
+  },
+
+  updateDocumentInTable: (req, res) => {
+    try {
+      DynamodbService.updateDocumentInTable(
+        req.params.tableName,
+        req.params.documentId,
+        req.body
+      ).then(
+        (resp) => {
+          res.status(200).send(resp);
+        },
+        (error) => {
+          res.status(405).send('Document not found');
+        }
+      );
+    } catch (error) {
+      res.status(500).send(error);
+    }
+  },
+};
+
+module.exports = TableController;
