# server.js
@@ -1,6 +1,6 @@
 const express = require('express');
 const bodyParser = require('body-parser');
-const documentsRoutes = require('./routes/documents.routes');
+const tableRoutes = require('./routes/table.routes');
 const cors = require('cors');
 
 const config = {
@@ -13,7 +13,7 @@ const app = express();
 
 app.use(bodyParser.json());
 app.use(cors());
-app.use('/documents', documentsRoutes);
+app.use('/table', tableRoutes);
 
 app.listen(config.port, config.host, (e) => {
   if (e) {
