# swagger.yaml
@@ -14,7 +14,7 @@ schemes:
   - 'https'
   - 'http'
 paths:
-  /documents:
+  /table/{tableName}:
     post:
       tags:
         - 'documents'
@@ -26,6 +26,11 @@ paths:
       produces:
         - 'application/json'
       parameters:
+        - name: 'tableName'
+          in: 'path'
+          description: 'Name of the DynamoDB table to be operated against'
+          required: true
+          type: 'string'
         - in: 'body'
           name: 'body'
           description: 'A new document that needs to be added to the data store'
@@ -43,6 +48,12 @@ paths:
       operationId: 'getDocuments'
       produces:
         - 'application/json'
+      parameters:
+        - name: 'tableName'
+          in: 'path'
+          description: 'Name of the DynamoDB table to be operated against'
+          required: true
+          type: 'string'
       responses:
         200:
           description: 'successful operation'
@@ -52,7 +63,7 @@ paths:
               $ref: '#/definitions/Document'
         404:
           description: 'Document not found'
-  /documents/{documentId}:
+  /table/{tableName}/{documentId}:
     get:
       tags:
         - 'documents'
@@ -62,6 +73,11 @@ paths:
       produces:
         - 'application/json'
       parameters:
+        - name: 'tableName'
+          in: 'path'
+          description: 'Name of the DynamoDB table to be operated against'
+          required: true
+          type: 'string'
         - name: 'documentId'
           in: 'path'
           description: 'ID of document to return'
@@ -83,6 +99,11 @@ paths:
       produces:
         - 'application/json'
       parameters:
+        - name: 'tableName'
+          in: 'path'
+          description: 'Name of the DynamoDB table to be operated against'
+          required: true
+          type: 'string'
         - name: 'documentId'
           in: 'path'
           description: 'ID of document to delete'
@@ -106,6 +127,11 @@ paths:
       produces:
         - 'application/json'
       parameters:
+        - name: 'tableName'
+          in: 'path'
+          description: 'Name of the DynamoDB table to be operated against'
+          required: true
+          type: 'string'
         - name: 'documentId'
           in: 'path'
           description: 'ID of document to update'
